Simplify command tests