@@ -2,7 +2,6 @@ package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.commons.core.Messages.MESSAGE_STUDENTS_LISTED_OVERVIEW;
 import static seedu.address.commons.core.Messages.MESSAGE_TUTORS_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.VALID_GENDER_AMY;
@@ -20,6 +19,7 @@ import static seedu.address.testutil.TypicalPersons.getTypicalCliTutorsWithSimil
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
@@ -45,11 +45,11 @@ import seedu.address.model.tag.Tag;
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
-    private Model model = new ModelManager(getTypicalCliTutors(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalCliTutors(), new UserPrefs());
-    private Model similarNamesModel = new ModelManager(getTypicalCliTutorsWithSimilarNames(),
+    private final Model model = new ModelManager(getTypicalCliTutors(), new UserPrefs());
+    private final Model expectedModel = new ModelManager(getTypicalCliTutors(), new UserPrefs());
+    private final Model similarNamesModel = new ModelManager(getTypicalCliTutorsWithSimilarNames(),
             new UserPrefs());
-    private Model expectedSimilarNamesModel = new ModelManager(getTypicalCliTutorsWithSimilarNames(),
+    private final Model expectedSimilarNamesModel = new ModelManager(getTypicalCliTutorsWithSimilarNames(),
             new UserPrefs());
 
     @Test
@@ -129,7 +129,7 @@ public class FindCommandTest {
         FindCommand findThirdCommand = new FindCommand(firstPredicate, PersonType.STUDENT);
 
         // same object -> returns true
-        assertTrue(findFirstCommand.equals(findFirstCommand));
+        assertEquals(findFirstCommand, findFirstCommand);
 
         // same value and personType -> returns true
         FindCommand findFirstCommandCopy = new FindCommand(firstPredicate, PersonType.TUTOR);
@@ -159,20 +159,20 @@ public class FindCommandTest {
      * Parses {@code userInput} into a {@code GenderContainsGenderPredicate}.
      */
     private GenderContainsGenderPredicate prepareGenderPredicate(String userInput) {
-        return new GenderContainsGenderPredicate(Arrays.asList(new Gender(userInput)));
+        return new GenderContainsGenderPredicate(List.of(new Gender(userInput)));
     }
 
     /**
      * Parses {@code userInput} into a {@code GenderContainsGenderPredicate}.
      */
     private QualificationContainsQualificationPredicate prepareQualificationPredicate(String userInput) {
-        return new QualificationContainsQualificationPredicate(Arrays.asList(new Qualification(userInput)));
+        return new QualificationContainsQualificationPredicate(List.of(new Qualification(userInput)));
     }
 
     /**
      * Parses {@code userInput} into a {@code TagsContainsTagPredicate}.
      */
     private TagsContainTagPredicate prepareTagPredicate(String userInput) {
-        return new TagsContainTagPredicate(Arrays.asList(new Tag(userInput)));
+        return new TagsContainTagPredicate(List.of(new Tag(userInput)));
     }
 }
